Fixing name-convention changing in controller and views

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -43,7 +43,7 @@
 
   <div class="field">
     <%= form.label :type %>
-    <%= form.number_field :type %>
+    <%= form.number_field :client_type %>
   </div>
 
   <div class="actions">
