--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= client.nationality %></td>
         <td><%= client.date_of_birth %></td>
         <td><%= client.email %></td>
-        <td><%= client.type %></td>
+        <td><%= client.client_type %></td>
         <td><%= link_to 'Show', client %></td>
         <td><%= link_to 'Edit', edit_client_path(client) %></td>
         <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
