--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.number_field :type %>
+    <%= form.label :employee_type %>
+    <%= form.number_field :employee_type %>
   </div>
 
   <div class="field">
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :isFemale %>
-    <%= form.check_box :isFemale %>
+    <%= form.label :is_female %>
+    <%= form.check_box :is_female %>
   </div>
 
   <div class="field">
