--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -21,9 +21,9 @@
     <% @employees.each do |employee| %>
       <tr>
         <td><%= employee.name %></td>
-        <td><%= employee.type %></td>
+        <td><%= employee.employee_type %></td>
         <td><%= employee.citizen_id %></td>
-        <td><%= employee.isFemale %></td>
+        <td><%= employee.is_female %></td>
         <td><%= employee.nationality %></td>
         <td><%= employee.date_of_birth %></td>
         <td><%= employee.email %></td>
