--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @employee.type %>
+  <%= @employee.employee_type %>
 </p>
 
 <p>
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Isfemale:</strong>
-  <%= @employee.isFemale %>
+  <%= @employee.is_female %>
 </p>
 
 <p>
