--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @client.type %>
+  <%= @client.client_type %>
 </p>
 
 <%= link_to 'Edit', edit_client_path(@client) %> |
