--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer is-hidden">
   <div class="container">
     <div class="content has-text-centered">
-      <p>Hello</p>
+      <p>Footer</p>
     </div>
   </div>
 </footer>
