--- a/app/views/room_types/edit.html.erb
+++ b/app/views/room_types/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Room Type</h1>
+<center><h1 class="title">Editing Room Type</h1></center>
 
 <%= render 'form', room_type: @room_type %>
 
