--- a/app/views/room_types/new.html.erb
+++ b/app/views/room_types/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Room Type</h1>
-
+<center><h1 class="title">New Room Type</h1></center>
 <%= render 'form', room_type: @room_type %>
 
-<%= link_to 'Back', room_types_path %>
+<button class="button_back"><%= link_to 'Back', room_types_path %></button>
