--- a/app/views/room_types/index.html.erb
+++ b/app/views/room_types/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Room Types</h1>
+<center><h1 class="title">Room Types</h1></center>
 
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th>Name</th>
@@ -36,8 +36,45 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
 
+
+<div class="roomtype_sum_container tRow">
+    <div>
+        Danh sach loai phong ( Tong so loai phong )
+    </div>
+    <div>
+        <%= link_to new_room_type_path do%><i class="fas fa-plus-circle"></i><% end %>
+    </div>
+</div>
+<center>
+<div class="roomtype_list_container tColumn">
+    <% @room_types.each do |room_type| %>
+    <div class="item tRow">
+        <div class="section tRow">
+            <div class="">
+                <%= link_to room_type, method: :delete, data: { confirm: 'Are you sure?' } do %><i class="fas fa-minus-circle"></i><% end %>
+            </div>
+            <div class="tColumn">
+                <div>
+                    <%= room_type.name %>
+                </div>
+                <div>
+                    VND <%= room_type.hour_price %>
+                </div>
+            </div>
+        </div>
+        <div class="section tRow">
+            <div class="">
+                <%= link_to edit_room_type_path(room_type) do%><i class="fas fa-pencil-alt"></i><% end %>
+            </div>
+            <div class="">
+                <i class="fas fa-dollar-sign"></i></div>
+        </div>
+    </div>
+    <% end %>
+</div>
+</center>
 <br>
 
-<%= link_to 'New Room Type', new_room_type_path %>
+<!-- <%= link_to 'New Room Type', new_room_type_path %> -->
