Update UI of notification in delete room type

--- a/app/assets/stylesheets/room_types.scss
+++ b/app/assets/stylesheets/room_types.scss
@@ -1,6 +1,13 @@
 // Place all the styles related to the RoomTypes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.notice_success{
+    background-color: #effaf5;
+    color: #257953;
+    font-size: 17px;
+    padding: 10px 0px;
+}
+
 .title{
     margin-bottom: 40px;
     color: #6749b9;
