--- a/app/views/room_types/_form.html.erb
+++ b/app/views/room_types/_form.html.erb
@@ -59,7 +59,7 @@
     </div>
   </div>
 
-  <!-- <div class="field tRow">
+  <div class="field tRow">
     <%= form.label :add_adult_price %>
     <%= form.text_field :add_adult_price %>
   </div>
@@ -97,7 +97,7 @@
   <div class="field">
     <%= form.label :description %>
     <%= form.text_field :description %>
-  </div> -->
+  </div>
 
   <div class="actions button_submit">
     <%= form.submit %>
