--- a/app/views/room_types/index.html.erb
+++ b/app/views/room_types/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="notice_success"><%= notice %></p>
 
 <center><h1 class="title">Room Types</h1></center>
 
