--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -1,4 +1,12 @@
 // Place all the styles related to the Employees controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.employee_type{
+    font-size: 14px;
+    font-weight: bold;
+    color: blue;
+}
 
+._form_checkbox{
+    font-size: 17px;
+}
