--- a/app/views/room_types/edit.html.erb
+++ b/app/views/room_types/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', room_type: @room_type %>
 
-<%= link_to 'Show', @room_type %> |
-<%= link_to 'Back', room_types_path %>
+<button class="button_back"><%= link_to 'Back', room_types_path %></button>
+<button class="button_show"><%= link_to 'Show', @room_type %></button>
