--- a/app/views/room_types/show.html.erb
+++ b/app/views/room_types/show.html.erb
@@ -1,49 +1,62 @@
+<center>
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
+<div class="show_container tColumn">
+<p class="tRow">
+  <strong class="show_roomtype_name">Name:</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.name %>
 </p>
 
-<p>
-  <strong>Hour price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Hour price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.hour_price %>
 </p>
 
-<p>
-  <strong>Date price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Date price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.date_price %>
 </p>
 
-<p>
-  <strong>Past night price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Past night price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.past_night_price %>
 </p>
 
-<p>
-  <strong>Week price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Week price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.week_price %>
 </p>
 
-<p>
-  <strong>Month price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Month price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.month_price %>
 </p>
 
-<p>
-  <strong>Add adult price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Add adult price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.add_adult_price %>
 </p>
 
-<p>
-  <strong>Add child price:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Add child price</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.add_child_price %>
 </p>
 
-<p>
-  <strong>Description:</strong>
+<p class="tRow">
+  <strong class="show_roomtype_name">Description</strong>
+  <strong class="show_sign">:</strong>
   <%= @room_type.description %>
 </p>
+</div>
+<button class="button_back"><%= link_to 'Back', room_types_path %></button>
+<button class="button_edit"><%= link_to 'Edit', edit_room_type_path(@room_type) %></button>
 
-<%= link_to 'Edit', edit_room_type_path(@room_type) %> |
-<%= link_to 'Back', room_types_path %>
+</center>
