--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form', employee: @employee %>
 
-<%= link_to 'Show', @employee %> |
-<%= link_to 'Back', employees_path %>
+<button class="button_back"><%= link_to 'Back', employees_path %></button>
+<button class="button_show"><%= link_to 'Show', @employee %></button>
+
+
+
