--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', employee: @employee %>
 
-<%= link_to 'Back', employees_path %>
+<button class="button_back"><%= link_to 'Back', employees_path %></button>
