--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="roomtype_sum_container tRow">
   <div>
-      Danh sach nhan vien ( Tong so nhan vien )
+      Danh sach nhan vien ( <%= @employees.ids.count %> )
   </div>
   <div>
       <%= link_to new_employee_path do%><i class="fas fa-plus-circle"></i><% end %>
@@ -33,9 +33,12 @@
               </div>
           </div>
           <div class="section tRow">
-              <div class="">
-                  <%= link_to edit_employee_path(employee) do%><i class="fas fa-pencil-alt"></i><% end %>
-              </div>
+            <div class="icon_costom">
+              <%= link_to  employee do %> <i class="fa fa-eye" style="font-size:2rem"></i><% end %>
+            </div>
+            <div class="icon_costom">
+                <%= link_to edit_employee_path(employee) do%><i class="fas fa-pencil-alt"></i><% end %>
+            </div>
           </div>
       </div>
       <% end %>
