--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -133,7 +133,7 @@
               <div class="card-body">
                 <div class="chart-area">
                   <canvas id="myAreaChart">
-                    <%= pie_chart Employee.group(:name).count %>
+                    <%#= pie_chart Employee.group(:name).count %>
                   </canvas>
                 </div>
               </div>
