Delete receptionist folder. Adding new controller: room diagram

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Lễ Tân</a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
               <li>
-                <%= link_to 'Sơ đồ phòng', root_path %>
+                <%= link_to 'Sơ đồ phòng', room_diagram_path %>
               </li>
               <li>
                 <%= link_to 'Khách lẻ', root_path %>
