--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -1,11 +1,82 @@
-<h1>Sơ đồ phòng</h1>
-<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Library</li>
-  </ol>
+<%= stylesheet_link_tag "room_diagram" %>
+<nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <div class="row">
+    <div class="col-6">
+      <div class="d-flex justify-content-start">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Lễ tân</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Sơ đồ phòng</li>
+        </ol>
+      </div>
+    </div>
+    <div class="col-6">
+      <div id="search" class="d-flex justify-content-end">
+        <div class="btn-group">
+          <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Tầng
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+          <div class="form-group has-search">
+
+            <input type="text" class="form-control" placeholder="Tìm kiếm...">
+            <span class="fa fa-search form-control-feedback"></span>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </nav>
-<div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-primary">Tầng</button>
-  <button type="button" class="btn btn-secondary">Loại phòng</button>
+<div class="page-section d-flex justify-content-center">
+  <div id="switcher" class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-primary">Tầng</button>
+    <button type="button" class="btn inactive">Loại phòng</button>
+  </div>
+</div>
+<div class="page-section">
+  <div class="filter-wrapper">
+    <div class="filter-item">
+      <p>Tất cả (6)</p>
+    </div>
+    <div class="filter-item">
+      <p>Tất cả (6)</p>
+    </div>
+    <div class="filter-item">
+      <p>Tất cả (6)</p>
+    </div>
+    <div class="filter-item">
+      <p>Tất cả (6)</p>
+    </div>
+  </div>
+</div>
+<h3>Tầng 1</h3>
+<div class="page-section d-flex">
+  <div class="room-wrapper">
+    <div class="card" style="">
+      <div class="card-body" style="padding-bottom: 0px;">
+        <div class="card-text row">
+          <p class="col-6">A101</p>
+          <span class="col-6 d-flex justify-content-end"><i class="fas fa-ellipsis-v"></i></span>
+        </div>
+        <div class="card-text d-flex justify-content-center">
+          <span><i class="fa fa-user"></i></span>
+          <span style="width: 5px"></span>
+          <h5 class="child">Trống</h5>
+        </div>
+      </div>
+      <hr>
+      <div class="card-body" style="padding-top: 0px;">
+        <div class="d-flex order-btn">
+          <a href="#" class="btn btn-primary">Đặt nhanh</a>
+          <a href="#" class="btn btn-primary">Khách lẻ</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
